6.14.5.1
    rtstats(1):
        * Commented code about who logs because the code is convoluted
        * Removed trailing newline in rtstats(1) log message to eliminate extraneous log message
        * Eliminated sending of NULLPROC before closing connection because it's superfluous

    Documentation:
        * Added requirement that "RemoveIPC" in "/etc/systemd/logind.conf" must be "no" to
          prevent systemd(8) from deleting the LDM's shared-memory segment that contains the
          upstream LDM database.

    CHANGE_LOG:
        * Consolidated 6.14.4.* entries into 6.14.4.

6.14.4  2023-01-26T11:03:17-0700
    ldmd(1):
        * Eliminated log messages when an upstream LDM process that was ACCEPTed terminates. This
          should reduce the number of log messages on the rtstats(1) mothership.
        * Moved setting of "hiyaCalled" to top of HIYA service functions
        * Made ECONNRESET error a single INFO-level log message
        * Replace some ERROR log messages with FATAL ones in the main module.

    NOAAPort:
        * Added entries with new PDTNs to GEMPAK tables:
            * g2varswmo.tbl:
                000 002 000 002 Wind Direction             Degree true  DRCT    0  -9999.00
            * g2varsncep.tbl:
                001 001 194 009 Prob precip exceeding FFG  %            PEFG--  0  -9999.00

    rtstats(1):
        * Made error reporting more robust

    Documentation:
        * More hyperlink corrections
        * Returned Coverity Scan badge to top-level, version-specific index.html

    Misc:
        * Removed lint found by Coverity Scan
        * ErrObj module
            * Created
            * Created log_dispose(ErrObj*)
            * Might get used; might not.

    DevOps:
        * Enhanced "pre-commit" hook to vet the version ID in CHANGE_LOG and ensure a timestamp
          in CHANGE_LOG when committing to the main branch
        * Enhanced "OnPush.yml":
            * Vet the version ID in CHANGE_LOG and "configure.ac"